--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.12.7",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
